syntax = "proto3";

package hr;

import "google/protobuf/empty.proto";

// Protobuffers definition for the auth service
// we will modify as we go

service HrService {
  rpc GetEmployee (GetEmployeeRequest) returns (GetEmployeeResponse) {}
  rpc GetEmployees (google.protobuf.Empty) returns (GetEmployeesResponse) {}
  rpc CreateEmployee (CreateEmployeeRequest) returns (CreateEmployeeResponse) {}
  rpc CreateEmployeeAddition (CreateEmployeeAdditionRequest) returns (CreateEmployeeAdditionResponse) {}
  rpc GetEmployeeAdditions (GetEmployeeAdditionRequest) returns (GetEmployeeAdditionsResponse) {}
  rpc GetMaritalTypes(google.protobuf.Empty) returns (GetMaritalTypesResponse) {}
  rpc GetCountries(google.protobuf.Empty) returns (GetCountriesResponse) {}
  rpc GenerateToWorkDocuments(GenerateToWorkDocumentsRequest) returns (GenerateToWorkDocumentsResponse) {}
  rpc GetApplications(GetApplicationRequest) returns (GetApplicationsResponse) {}
  rpc GetApplicationTypes(google.protobuf.Empty) returns (GetApplicationTypesResponse) {}
  rpc CreateApplication(CreateApplicationRequest) returns (CreateApplicationResponse) {}
  rpc GetHeads(google.protobuf.Empty) returns (GetHeadsResponse) {}
  rpc ApproveApplication(ApproveApplicationRequest) returns (ApproveApplicationResponse) {}
}

message GetEmployeeRequest {
  int32 id = 1;
}

message GetEmployeeResponse {
  int32 id = 1;
  string name = 2;
  string surname = 3;
  string secondName = 4;
  bool sex = 5;
  string address = 6;
  string phone = 7;
  int32  citizenshipId = 8;
  string birthday = 9;
  int32 marriageId = 10;
  int32 militaryId = 11;
  int32 statusId = 12;
  int32 userId = 13;
  int32 employeeAddId = 14;
}

message GetEmployeesResponse {
  repeated GetEmployeeResponse employees = 1;
}

message CreateEmployeeResponse {
  GetEmployeeResponse employee = 1;
}

message CreateEmployeeRequest {
  string name = 1;
  string surname = 2;
  string secondName = 3;
  bool sex = 4;
  string address = 5;
  string phone = 6;
  int32 citizenshipId = 7;
  string birthday = 8;
  int32 marriageId = 9;
  int32 militaryId = 10;
  int32 statusId = 11;
  int32 userId = 12;
  int32 employeeAddId = 13;
}

message GetEmployeeAdditionRequest {
  int32 id = 1;
}

message GetEmployeeAdditionResponse {
  int32 id = 1;
  int32 departmentId = 2;
  int32 positionId = 3;
  int32 levelId = 4;
  int32 headId = 5;
  int32 contractId = 6;
  int32 workFormatId = 7;
  int32 medCertStatus = 8;
  string salaryAfterProbation = 9;
  string startDate = 10;
  string periodProbation = 11;
}

message GetEmployeeAdditionsResponse {
  repeated GetEmployeeAdditionResponse employeeAdditions = 1;
}

message CreateEmployeeAdditionRequest {
  int32 departmentId = 1;
  int32 positionId = 2;
  int32 levelId = 3;
  int32 headId = 4;
  int32 contractId = 5;
  int32 workFormatId = 6;
  int32 medCertStatus = 7;
  string salaryAfterProbation = 8;
  string startDate = 9;
  string periodProbation = 10;
}

message CreateEmployeeAdditionResponse {
  GetEmployeeAdditionResponse employeeAddition = 1;
}

message GetMaritalTypeResponse {
  int32 id = 1;
  string title = 2;
}

message GetMaritalTypesResponse {
  repeated GetMaritalTypeResponse maritalTypes = 1;
}

message GetCountryResponse {
  int32 id = 1;
  string title = 2;
}

message GetCountriesResponse {
  repeated GetCountryResponse countries = 1;
}

message GenerateToWorkDocumentsRequest {
  int32 employeeId = 1;
  int32 positionId = 2;
  int32 headId = 3;
  int32 typeId = 4;
}
message GenerateToWorkDocumentsResponse {
  string message = 1;
}

message GetApplicationRequest {
  int32 empId = 1;
}


message GetApplicationResponse {
  int32 id = 1;
  int32 typeId = 2;
  int32 empId = 3;
  int32 headId = 4;
  int32 statusId = 5;
  int32 formedId = 6;
  string formedAt = 7;
  string approvedAt = 8;
  string createdAt = 9;
  string updatedAt = 10;
}

message GetApplicationsResponse {
  repeated GetApplicationResponse applications = 1;
}

message CreateApplicationRequest {
  int32 typeId = 1;
  int32 empId = 2;
  int32 headId = 3;
  int32 statusId = 4;
}

message CreateApplicationResponse {
  string message = 1;
}

message GetApplicationTypeResponse {
  int32 id = 1;
  string title = 2;
  bool order = 3;
}

message GetApplicationTypesResponse {
  repeated GetApplicationTypeResponse applicationTypes = 1;
}


message GetHeadResponse {
  int32 id = 1;
  int32 empId = 2;
  string createdAt = 3;
  string updatedAt = 4;
  string deletedAt = 5;
}

message GetHeadsResponse {
  repeated GetHeadResponse heads = 1;
}

message ApproveApplicationRequest {
  int32 id = 1;
}

message ApproveApplicationResponse {
  string message = 1;
}
